some stuff and added qte

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Blockout_Level1/Level1_FullBlockout.Level1_FullBlockout
+EditorStartupMap=/Game/Blockout_Level1/Level1_FullBlockout.Level1_FullBlockout
 GlobalDefaultGameMode="/Script/FinalEscort.FinalEscortGameMode"
 
 [/Script/Engine.RendererSettings]
